2007-12-06  D. Goel  <deego3@gmail.com>

	* erc-match.el (erc-add-entry-to-list): Fix buggy call to `error'.

2007-12-01  Glenn Morris  <rgm@gnu.org>

	* erc-backend.el (erc-server-send-ping): Move after definition of
	erc-server-send.

	* erc.el (iswitchb-temp-buflist, iswitchb-read-buffer)
	(erc-controls-strip): Declare for compiler.
	(erc-iswitchb): Don't require iswitchb when compiling.  Test
	iswitchb-mode is bound.

2007-11-30  Dan Nicolaescu  <dann@ics.uci.edu>

	* erc.el (open-ssl-stream, open-tls-stream, erc-network-name):
	Declare as functions.

2007-11-29  Giorgos Keramidas  <keramida@ceid.upatras.gr>  (tiny change)

	* erc-backend.el, erc.el:
	Parse 307 (nick has identified) responses.

2007-11-15  Juanma Barranquero  <lekktu@gmail.com>

	* erc.el (erc-open):
	* erc-backend.el (define-erc-response-handler):
	* erc-log.el (log):
	* erc-match.el (erc-log-matches): Fix typos in docstrings.

2007-11-11  Michael Olson  <mwolson@gnu.org>

	* erc-autoaway.el (erc-autoaway-possibly-set-away):
	* erc-netsplit.el (erc-netsplit-timer):
	* erc-notify.el (erc-notify-timer):
	* erc-track.el (erc-user-is-active): Only run if we have
	successfully established a connection to the server and have
	logged in.  I suspect that sending messages too soon may make some
	IRC servers not respond well, particularly when the network
	connection is iffy or subject to traffic-shaping.

2007-11-01  Michael Olson  <mwolson@gnu.org>

	* erc-compat.el (erc-set-write-file-functions): New compatibility
	function to set the write hooks appropriately.

	* erc-log.el (erc-log-setup-logging): Use
	erc-set-write-file-functions.  This fixes a byte-compiler warning.

	* erc-stamp.el: Silence byte-compiler warning about
	erc-fill-column.

	* erc.el (erc-with-all-buffers-of-server): Bind the result of
	mapcar to a variable in order to silence a byte-compiler warning.

2007-10-29  Michael Olson  <mwolson@gnu.org>

	* erc-ibuffer.el (erc-modified-channels-alist): Use